; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_srcpos.c_dtc_close_file.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_srcpos.c_dtc_close_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtc_file = type { %struct.dtc_file*, i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"Error closing \22%s\22: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dtc_close_file(%struct.dtc_file* %0) #0 {
  %2 = alloca %struct.dtc_file*, align 8
  store %struct.dtc_file* %0, %struct.dtc_file** %2, align 8
  %3 = load %struct.dtc_file*, %struct.dtc_file** %2, align 8
  %4 = getelementptr inbounds %struct.dtc_file, %struct.dtc_file* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @fclose(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.dtc_file*, %struct.dtc_file** %2, align 8
  %10 = getelementptr inbounds %struct.dtc_file, %struct.dtc_file* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i32, i32* @errno, align 4
  %13 = call i32 @strerror(i32 %12)
  %14 = call i32 @die(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = load %struct.dtc_file*, %struct.dtc_file** %2, align 8
  %17 = getelementptr inbounds %struct.dtc_file, %struct.dtc_file* %16, i32 0, i32 0
  %18 = load %struct.dtc_file*, %struct.dtc_file** %17, align 8
  %19 = call i32 @free(%struct.dtc_file* %18)
  %20 = load %struct.dtc_file*, %struct.dtc_file** %2, align 8
  %21 = call i32 @free(%struct.dtc_file* %20)
  ret void
}

declare dso_local i64 @fclose(i32) #1

declare dso_local i32 @die(i8*, i32, i32) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @free(%struct.dtc_file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
